--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
   "name": "intent-bot",
-  "packageManager": "yarn@4.7.0"
+  "packageManager": "yarn@4.7.0",
+  "devDependencies": {
+    "@types/node": "^22.13.13",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "ethers": "6.13.5",
+    "viem": "^2.23.14"
+  }
 }
