--- a/solver/.gitignore
+++ b/solver/.gitignore
@@ -4,6 +4,7 @@
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+.env
 
 # Whether you use PnP or not, the node_modules folder is often used to store
 # build artifacts that should be gitignored
