--- a/intent-contract/.gitignore
+++ b/intent-contract/.gitignore
@@ -2,10 +2,9 @@
 cache/
 out/
 /node_modules/
-/broadcast/
 
 # Ignores development broadcast logs
-!/broadcast
+!/broadcast*
 /broadcast/*/31337/
 /broadcast/**/dry-run/
 
